# bitsandpieces

./: README.md
atmega/: main.c  pins.h  serial.c  spi.c  spi.h  utils.h
c/: bytes.c  bytes.h  file.c  file.h  hex.c  hex.h  mkpath-test.c  mkpath.c  mkpath.h  relpath-test.c  relpath.c  relpath.h  ringbuf.c  ringbuf.h  win-argv-test.c  win-argv.c  win-argv.h  win-utf-test.c  win-utf.c  win-utf.h
pic14/: config.h  delay.asm  delay.h  interrupts.c  pins.m4  timers.c  timers.h
pic14/ext_hw/: counter.c  counter.h  motor_dc.c  motor_dc.h  motor_servo.c  motor_servo.h  ultra.c  ultra.h
project/: arduino.mk  linux_app.mk  rgbds.mk  sdcc.mk
project/autotools/: GNUmakefile  Makefile.am  configure.ac  project.pc.in
project/autotools/source/: lib.c  lib.h  main.c
python/: bitstream.py  crc16.py  png.py
sh/: tmp.sh
stm32/: openocd.cfg  stream_itm.c  upload.mk
